Fix overlapping in FF and Opera

--- a/public/stylesheets/site/2.0/03-region-header.css
+++ b/public/stylesheets/site/2.0/03-region-header.css
@@ -108,6 +108,10 @@ notice that CSS3 declarations sit are indented twice (four spaces) and always co
   right: 0;
 }
 
+#small_login form {
+  margin-top: 1.286em;
+}
+
 /*CONTEXT: collections*/
 
 #header h2 {
